# TestCpp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testcppaplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/testcppaplication/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/testcppaplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
